--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   </style>
 </head>
 <body>
-  <h1>Nielsen Novak</h1>
+  <h1>Christopher Nielsen & Natalie Novak</h1>
   <p>Our wedding website is coming soon!</p>
 </body>
 </html>
